@@ -14,7 +14,6 @@ internal class RejuvenatePotion : ModItem {
 	public override void SetDefaults() {
 		Item.BossRushDefaultPotion(32, 32, ModContent.BuffType<FireResistanceBuff>(), ModUtils.ToMinute(.5f));
 		Item.Set_AdvancedBuffItem();
-		Item.Set_ItemIsRPG();
 	}
 }
 public class RejuvenatePotionBuff : ModBuff {
