@@ -12,7 +12,6 @@ internal class ScrollOfInvincibility : ModItem {
 	public override void SetDefaults() {
 		Item.Set_AdvancedBuffItem();
 		Item.BossRushDefaultPotion(32, 32, ModContent.BuffType<InvincibilitySpell>(), ModUtils.ToSecond(10));
-		Item.Set_ItemIsRPG();
 	}
 }
 public class InvincibilitySpell : ModBuff {
